intTests/test_type_errors/err030.log.good
Loading file "err030.saw"
Type errors:
  err030.saw:5:9-5:13: Kind mismatch: expected * -> * but found *
  err030.saw:5:20-5:29: Error: Type mismatch.
    Expected: t.0 Int
    Found:    Type

  err030.saw:5:9-5:17: Note: The type t.0 Int arises from this type annotation
  err030.saw:5:20-5:29: Note: The type Type arises from the type of this term


FAILED
