intTests/test_type_errors/err030.saw
//
// Too many arguments for type constructor: Type
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : Type Int = {| [8] |};


